renaming images path

--- a/source/_posts/2015-09-20-ios9.md
+++ b/source/_posts/2015-09-20-ios9.md
@@ -5,7 +5,7 @@ description: Ce nouveau cru du système à la pomme iOS 9 est surprenant.
 categories: Geek
 tags: Apple,iPhone,iOS 
 author: iSebmo
-fimg: 2015/09/ios9.jpg
+fimg: https://s3.eu-central-1.amazonaws.com/tfada/ios9.jpg
 ---
 
 # Les plus
@@ -44,8 +44,8 @@ L'écran de recherche rame, sur iPhone 5s comme sur le 6 plus mais aussi l'iPad 
 Pour terminer je trouve que cette version du système est une des **meilleures** que Apple ait sortie. L'utilisateur final perd peut-être en fonctionnalités, car cette version n'en propose pas *énormément* de nouvelles, mais gagne énormément en *qualité* et *réactivité*.           
 
 [evernote]: http://evernote.com
-[app]: http://tfada.fr/images/2015/09/app.png
-[siri]: http://tfada.fr/images/2015/09/siri.png
-[multi]: http://tfada.fr/images/2015/09/multi.png
-[retour]: http://tfada.fr/images/2015/09/retour.png
+[app]: https://s3.eu-central-1.amazonaws.com/tfada/app.png
+[siri]: https://s3.eu-central-1.amazonaws.com/tfada/siri.png
+[multi]: https://s3.eu-central-1.amazonaws.com/tfada/multi.png
+[retour]: https://s3.eu-central-1.amazonaws.com/tfada/retour.png
 [ed]: https://geo.itunes.apple.com/fr/app/editorial/id673907758?mt=8&at=1l3vs3Y
