--- a/source/_posts/2015-09-21-watchos.md
+++ b/source/_posts/2015-09-21-watchos.md
@@ -5,7 +5,7 @@ description: le nouveau système dédié à l'Apple watch sort en version 2
 categories: Geek
 tags: AppleWatch,Apple 
 author: iSebmo
-fimg: 2015/09/watchos.jpeg
+fimg: https://s3.eu-central-1.amazonaws.com/tfada/watchos.jpeg
 ---
 
 Après avoir *repoussé* la sortie de l'OS de l'AppleWatch la v2 est là ! Prenez votre mal en patience l'iPhone m'indique plus d'une heure de téléchargement ! C'est *long* mais on n'est plus à une heure prêt. 
