--- a/source/_posts/2015-09-23-keith.md
+++ b/source/_posts/2015-09-23-keith.md
@@ -5,7 +5,7 @@ description: Keith Richards sort son nouvel album solo de quoi faire frissonner 
 categories: Musique
 tags: musique,blues,Keith
 author: iSebmo
-fimg: 2015/09/keith.jpeg
+fimg: https://s3.eu-central-1.amazonaws.com/tfada/keith.jpeg
 ---
 
 Petit événement sur la planète *blues*, le **dernier** album solo de Keith Richards vient de sortir. C'est seulement son *troisième* album en dehors de ceux sortis en compagnie des *Rolling Stones*. D'ailleurs il se murmure qu'ils ne vont pas tarder à rentrer en studio pour un *prochain* album (trop bien). 
