--- a/source/_posts/2015-09-24-keep.md
+++ b/source/_posts/2015-09-24-keep.md
@@ -5,7 +5,7 @@ description:  Google Keep pour iOS est enfin sortie.
 categories: Applications 
 tags: app,iOS,Google  
 author: iSebmo
-fimg: 2015/09/keep.jpeg
+fimg: https://s3.eu-central-1.amazonaws.com/tfada/keep.jpeg
 ---
 
 Google vient enfin de *libérer* son application de notes et de gestion de **tâches** connue sous le nom de [Google Keep][keep]. C'était une de mes applications préférées sous *Android*. Je trouvais l'idée des post-it très bien pensée. Ça nous donne une représentation *visuelle* de toutes nos notes à là différence de l'application Notes d'Apple. 
