--- a/source/_posts/2015-04-04-mizuno.md
+++ b/source/_posts/2015-04-04-mizuno.md
@@ -15,7 +15,7 @@ page_layout:
   - fullwidth
 categories:
   - Sport
-fimg: 2015/04/wpid-mizuno-prophecy-2.jpg
+fimg: https://s3.eu-central-1.amazonaws.com/tfada/wpid-mizuno-prophecy-2.jpg
 tags:
   - footing
   - garmin
@@ -26,14 +26,14 @@ Ca y est le beau temps est revenu, c’est le printemps (et les joggers aussi…
 Pour ma part, j’ai enfin trouvé chaussure à mon pied. Depuis un moment je cours en [Mizuno][2], marque que je *plébiscite* pour la pratique de running, car elles ont l’avantage de ne pas *s’user trop rapidement* à la différence des [New Balance][3].  
 Donc j’ai investi, c’est le mot vu le prix, sur ces [Prophecy][2] et je dois dire qu’elles sont *parfaites*.
 
-[<img class="aligncenter size-full wp-image-780" src="{{ site.baseurl }}/images/2015/04/wpid-mizuno-prophecy-3.jpg" alt="wpid-mizuno-prophecy-3.jpg" width="1000" height="667" />][4]
+[<img class="aligncenter size-full wp-image-780" src="https://s3.eu-central-1.amazonaws.com/tfada/wpid-mizuno-prophecy-3.jpg" alt="wpid-mizuno-prophecy-3.jpg" width="1000" height="667" />][4]
 
 Si vous êtes un *coureur plutôt lourd* et que vous courrez sur des terrains en bon état ou carrément sur le *bitume* alors ne chercher pas c’est le modèle qu’il vous faut.  
 Elles ne sont pas les plus légères de leur catégorie, mais elles ont sûrement un des meilleurs *amortis*. Les premiers pas que ferez avec vous procurerons une sensation de *dynamisme* à chaque foulée. Ce qui est étonnant la première fois que j’aie couru avec c’est le *silence* de mes pas sur le bitume, bluffant.
 
 Bien sûr comme toutes les chaussures de cette gamme le *confort* n’est pas en reste. Aucune couture à l’intérieur ne vient engendrer un quelconque *frottement*. Le tissu est très fin donc ne gêne pas lors de la foulée, à voir pour la *longévité*.
 
-[<img class="aligncenter size-full wp-image-779" src="{{ site.baseurl }}/images/2015/04/wpid-mizuno-prophecy-2.jpg" alt="wpid-mizuno-prophecy-2.jpg" width="1000" height="667" />][5]  
+[<img class="aligncenter size-full wp-image-779" src="https://s3.eu-central-1.amazonaws.com/tfada/wpid-mizuno-prophecy-2.jpg" alt="wpid-mizuno-prophecy-2.jpg" width="1000" height="667" />][5]  
 ![title][6]  
 Niveau esthétique elles sont plutôt réussies, mais n’espérez pas trouver un modèle qui passe incognito, car les coloris proposés sont plutôt *flashy*, c’est la mode à ce qu’il paraît.
 
@@ -44,7 +44,7 @@ Armés de ces [chaussures][2] et de la montre [Garmin Fénix 2][7] vous êtes pr
  [1]: file:///Users/sebastienmouret/Desktop/export-web/mizuno-prophecy-2.jpg
  [2]: http://www.amazon.fr/Mizuno-Prophecy-Chaussure-Course-agrave/dp/B00KPQA536/ref=sr_1_2?ie=UTF8&qid=1428158260&sr=8-2&keywords=mizuno+prophecy&tag=tfadafr-21
  [3]: http://www.amazon.fr/New-Balance-M1080-Chaussures-running/dp/B00K15QVPC/ref=sr_1_7?ie=UTF8&qid=1428158390&sr=8-7&keywords=new+balance+running&tag=tfadafr-21
- [4]: {{ site.baseurl }}/images/2015/04/wpid-mizuno-prophecy-3.jpg
- [5]: {{ site.baseurl }}/images/2015/04/wpid-mizuno-prophecy-2.jpg
+ [4]: https://s3.eu-central-1.amazonaws.com/tfada/wpid-mizuno-prophecy-3.jpg
+ [5]: https://s3.eu-central-1.amazonaws.com/tfada/wpid-mizuno-prophecy-2.jpg
  [6]: file:///Users/sebastienmouret/Desktop/export-web/mizuno-prophecy-3.jpg
  [7]: http://localhost/2014/12/le-sport-avec-la-garmin-fenix-2/
