--- a/source/_posts/2015-10-05-2bfit.md
+++ b/source/_posts/2015-10-05-2bfit.md
@@ -5,7 +5,7 @@ description: si vous n'aimez pas courir avec un brassard et votre téléphone au
 tags: iPhone,running,sport
 author: iSebmo
 #date: 2015-09-30
-fimg: 2015/10/2bfit.jpg
+fimg: https://s3.eu-central-1.amazonaws.com/tfada/2bfit.jpg
 categories: Sport & Santé
 ---
 
@@ -14,7 +14,7 @@ Cette ceinture est très bien pensée pour ceux et celles qui n'aiment pas couri
 
 Il faut commencer par prendre la bonne taille, attention, car la ceinture n'est pas élastique. En fonction de votre tour de taille, vous trouverez la taille sur le [site][2bfit], préférez la taille en dessous si vous êtes entre deux tailles. Vous l'enfilez par le bas et en deux secondes vous êtes prêt à partir. [Elle][2bfit] ne possède *pas de zip*, seulement de petites ouvertures horizontales. Le téléphone ne **risque** rien, au pire vous pouvez la retourner pour boucher l'accès à cette poche. Moi, je la porte **sous le short** comme ça pas de problème.
 
-![ceinture 2bfit](http://tfada.fr/images/2015/10/2bfit-2.jpg)
+![ceinture 2bfit](https://s3.eu-central-1.amazonaws.com/tfada/2bfit-2.jpg)
 
 Juste une petite remarque, la couture à l'intérieur peut-être *abrasive* pour le *revêtement* de votre *écran*. Je ne saurais trop vous conseiller que de tourner l'écran vers vous et laissez le dos de votre téléphone face à la couture.
 
